--- a/fast-approx-ML.ipynb
+++ b/fast-approx-ML.ipynb
@@ -35,7 +35,9 @@
    "source": [
     "We load the data file obtained from Daniel, and take a look: one row will contain the data relative to one geometry: \n",
     "\n",
-    "ast1, ast2, $t_1$, $t_2$, $m^*$, $m_i$, $\\Delta V^*$, $\\Delta V$, $\\Delta V_L$, $\\Delta V_D$, $m^*_L$, $m^*_D$\n"
+    "ast1, ast2, $t_1$, $t_2$, $m^*$, $m_i$, $\\Delta V^*$, $\\Delta V$, $\\Delta V_L$, $\\Delta V_D$, $m^*_L$, $m^*_D$\n",
+    "\n",
+    "We want to learn $\\Delta V$ (i.e. the final mass) from the rest. The ast1 and ast2 ids can be used with the gtoc7 asteroids to know the orbitalparameters.\n"
    ]
   },
   {
