--- a/fast-approx-ML.ipynb
+++ b/fast-approx-ML.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "### Visualizing the data\n",
     "\n",
-    "We plot the data with a high alpha as to show the data density. \n",
+    "We plot the data with a high alpha as to show the data density. The plots are a result of knowledge in the domain, thus manual feature engineering ...\n",
     "\n",
     "First we plot the starting mass (fraction w.r.t the maximual allowed $m^*$) vs the $\\Delta V$ (fraction w.r.t. $\\Delta V^*$). This last fraction is, essentially ,the duration of the coast arc. 1 -> no coast, 0-> full coast. \n",
     "We observe that no trajectory has a $\\Delta V$ higher than the one relative to maxmum mass (obvious as that correspond to no coast arc), you thus cannot thrust for longer. A strange feature that should be discussed / checked is that many trajectories show no coast arc even if they are very light."
